# time_tracking

./: CMakeLists.txt  LICENSE  README.md  record.ttr  ttr.settings
source/: cmd_line_opt.c  cmd_line_opt.h  common_fnc.c  common_fnc.h  files.c  files.h  main.c  time_tracking.c  time_tracking.h
test/: CMakeLists.txt  test_main.c  test_time_tracking.c  test_time_tracking.h
